did changes jdk version in POM.xml from 17 to 21

--- a/test-output/SparkReport/DSAlgo_Automation_Report.html
+++ b/test-output/SparkReport/DSAlgo_Automation_Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">DSAlgo Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 18, 2026 06:58:18 PM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 20, 2026 11:40:37 AM</span></a>
 </li>
 </ul>
 </div>
@@ -61,13 +61,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 18, 2026 06:58:18 PM</h3>
+<h3>Feb 20, 2026 11:40:37 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 18, 2026 06:58:29 PM</h3>
+<h3>Feb 20, 2026 11:40:51 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -157,7 +157,7 @@
 </div></div>
 <script>
 var timeline = {
-"LinkedList navigation and Try Editor execution in DsAlgo Portal":9.927,"Graph Functionality of Dsalgo Application":8.522,"Array module navigation and Try Editor":8.725
+"LinkedList navigation and Try Editor execution in DsAlgo Portal":13.208,"Array module navigation and Try Editor":11.547,"Graph Functionality of Dsalgo Application":12.668
 };
 </script>
 <div class="row">
@@ -235,7 +235,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">LinkedList navigation and Try Editor execution in DsAlgo Portal</p>
             <p class="text-sm">
-              <span>6:58:19 PM</span> / <span>00:00:09:927</span>
+              <span>11:40:38 AM</span> / <span>00:00:13:208</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -244,9 +244,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">LinkedList navigation and Try Editor execution in DsAlgo Portal</h5>
-<span class='badge badge-success'>02.18.2026 6:58:19 PM</span>
-<span class='badge badge-danger'>02.18.2026 6:58:29 PM</span>
-<span class='badge badge-default'>00:00:09:927</span>
+<span class='badge badge-success'>02.20.2026 11:40:38 AM</span>
+<span class='badge badge-danger'>02.20.2026 11:40:51 AM</span>
+<span class='badge badge-default'>00:00:13:208</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -338,9 +338,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Graph Functionality of Dsalgo Application</p>
+            <p class="name">Array module navigation and Try Editor</p>
             <p class="text-sm">
-              <span>6:58:19 PM</span> / <span>00:00:08:522</span>
+              <span>11:40:38 AM</span> / <span>00:00:11:547</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -348,10 +348,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Graph Functionality of Dsalgo Application</h5>
-<span class='badge badge-success'>02.18.2026 6:58:19 PM</span>
-<span class='badge badge-danger'>02.18.2026 6:58:28 PM</span>
-<span class='badge badge-default'>00:00:08:522</span>
+<h5 class="test-status text-pass">Array module navigation and Try Editor</h5>
+<span class='badge badge-success'>02.20.2026 11:40:38 AM</span>
+<span class='badge badge-danger'>02.20.2026 11:40:50 AM</span>
+<span class='badge badge-default'>00:00:11:547</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -363,14 +363,124 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="5"><span class="badge log pass-bg mr-2">Pass</span>Verify that the user is not able to see output after entering "12345" in try editor</div>
+        <div class="node" id="5"><span class="badge log pass-bg mr-2">Pass</span>Navigate to Array submodule, access Try Editor, and run code</div>
       </div>
     </div>
         <div class="scenario_outline collapse">
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="6"><span class="badge log pass-bg mr-2">Pass</span>Verify that the user is not able to see output after entering "12345" in try editor</div>
+                  <div class="node" id="6"><span class="badge log pass-bg mr-2">Pass</span>Navigate to Array submodule, access Try Editor, and run code</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>com.numpyninja.dsalgo.apphooks.ApplicationHooks.beforeScenario(io.cucumber.java.Scenario)</span>
+      <div>Launching on browser: chrome
+      </div>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Given User launches the browser and enters the DsAlgo application url</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When the user clicks on Get Started button in the DsAlgo Portal</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user clicks on Sign in link in the Home page</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then the page title should be displayed as "Login"</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When the user enters valid Username and Password in the Login form</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user clicks on Login button</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When the user clicks on Get Started button Array</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And the user clicks on the Array submodule "Applications of Array"</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And the user clicks on Try Here button on Array submodule</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And the user enters code from "Array_Try" and 6 in Try Editor on Array submodule and clicks Run</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then the Try Editor on Array submodule should display result from "Array_Try" and 6</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
+        </div>
+  </div>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="7"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">Graph Functionality of Dsalgo Application</p>
+            <p class="text-sm">
+              <span>11:40:38 AM</span> / <span>00:00:12:668</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">Graph Functionality of Dsalgo Application</h5>
+<span class='badge badge-success'>02.20.2026 11:40:38 AM</span>
+<span class='badge badge-danger'>02.20.2026 11:40:51 AM</span>
+<span class='badge badge-default'>00:00:12:668</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
+<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
+<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+</div>
+<div class="m-t-10 m-l-5"></div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="8"><span class="badge log pass-bg mr-2">Pass</span>Verify that the user is not able to see output after entering "12345" in try editor</div>
+      </div>
+    </div>
+        <div class="scenario_outline collapse">
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>Verify that the user is not able to see output after entering "12345" in try editor</div>
                 </div>
               </div>
               <div class="card-body mt-3 collapse">
@@ -458,116 +568,6 @@ eventsCount: 5,
                   </div>
                   <div class="step pass-bg">
                     <span>Then the user should not able to see output below Run button</span>
-      <div>
-      </div>
-                  </div>
-              </div>
-            </div>
-        </div>
-  </div>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="7"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
-            <p class="name">Array module navigation and Try Editor</p>
-            <p class="text-sm">
-              <span>6:58:19 PM</span> / <span>00:00:08:725</span>
-              <span class="badge pass-bg log float-right">Pass</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-pass">Array module navigation and Try Editor</h5>
-<span class='badge badge-success'>02.18.2026 6:58:19 PM</span>
-<span class='badge badge-danger'>02.18.2026 6:58:28 PM</span>
-<span class='badge badge-default'>00:00:08:725</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=7</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
-</div>
-<div class="m-t-10 m-l-5"></div>
-</div>
-</div>
-<div class="accordion mt-4">
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="8"><span class="badge log pass-bg mr-2">Pass</span>Navigate to Array submodule, access Try Editor, and run code</div>
-      </div>
-    </div>
-        <div class="scenario_outline collapse">
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>Navigate to Array submodule, access Try Editor, and run code</div>
-                </div>
-              </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>com.numpyninja.dsalgo.apphooks.ApplicationHooks.beforeScenario(io.cucumber.java.Scenario)</span>
-      <div>Launching on browser: chrome
-      </div>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Given User launches the browser and enters the DsAlgo application url</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When the user clicks on Get Started button in the DsAlgo Portal</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user clicks on Sign in link in the Home page</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then the page title should be displayed as "Login"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When the user enters valid Username and Password in the Login form</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user clicks on Login button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When the user clicks on Get Started button Array</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on the Array submodule "Applications of Array"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on Try Here button on Array submodule</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user enters code from "Array_Try" and 6 in Try Editor on Array submodule and clicks Run</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then the Try Editor on Array submodule should display result from "Array_Try" and 6</span>
       <div>
       </div>
                   </div>
